# bugzilla2fedmsg

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  Vagrantfile  bugzilla2fedmsg.py  development.ini.example  fedora-messaging.toml.example  pyproject.toml  requirements-tests.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dependabot-merge.yml  main.yml  tests.yml
.s2i/: environment
bugzilla2fedmsg/: __init__.py  consumer.py  relay.py  utils.py
bugzilla2fedmsg_schema/: schema.py  utils.py
devel/ansible/: playbook.yml
devel/ansible/roles/dev/files/: bashrc  config.toml
devel/ansible/roles/dev/tasks/: main.yml
devel/ansible/roles/rabbitmq/tasks/: main.yml
tests/: conftest.py  test_consumer.py  test_relay.py  test_schemas.py
